# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./vendors";
 export * from "./products";
 export * from "./email-verifications";
 export * from "./establishments";
+export * from "./listings";
